# TestProjects

./: README.md
Cheporov_Andrei_IMS_Archiver/: CMakeLists.txt  README.md  main.cpp
Cheporov_Andrei_IMS_Archiver/include/: archiver.hpp  extractor.hpp  signal_handler.hpp
Cheporov_Andrei_IMS_Archiver/src/: archiver.cpp  extractor.cpp  signal_handler.cpp
Cheporov_Andrei_Monitoring/: CMakeLists.txt  README.md  config.hpp  config.json  main.cpp
Cheporov_Andrei_Monitoring/metrics/: cpu_metric.hpp  memory_metric.hpp  metric.hpp
Cheporov_Andrei_Monitoring/output/: console_output.hpp  output.hpp
Cheporov_Andrei_RMK/: CMakeLists.txt  README.md  main.cpp  products.json
Cheporov_Andrei_RMK/include/: check.hpp  product.hpp  product_db.hpp  shift.hpp
Cheporov_Andrei_RMK/src/: check.cpp  product_db.cpp  shift.cpp
D-Bus_Configuration/: .clang-format  CMakeLists.txt  README.md
D-Bus_Configuration/confManagerApplication1/: CMakeLists.txt
D-Bus_Configuration/confManagerApplication1/include/: ClientApplication.hpp
D-Bus_Configuration/confManagerApplication1/src/: ClientApplication.cpp  main.cpp
D-Bus_Configuration/confManagerService/: CMakeLists.txt
D-Bus_Configuration/confManagerService/include/: ConfigurationManager.hpp
D-Bus_Configuration/confManagerService/src/: ConfigurationManager.cpp  main.cpp
D-Bus_Configuration/configs/: confManagerApplication1.json
club_system_solution/: Makefile  README.md  main.cpp  output_example.txt  test_file.txt  unit_tests.cpp
